Fix layout with CSS override in head instead of modifying Susy SCSS
Add !important flexbox overrides in custom.html that run after all
Susy-generated CSS. This ensures sidebar (200px sticky) and content
(flex:1) never overlap regardless of screen width. Reverts SCSS files
to original to avoid Susy conflicts.

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -3,19 +3,13 @@
    ========================================================================== */
 
 #main {
+  @include container;
+  @include clearfix;
   margin-top: 2em;
   padding-left: 1em;
   padding-right: 1em;
-  max-width: $large;
-  margin-left: auto;
-  margin-right: auto;
   animation: intro 0.3s both;
   animation-delay: 0.35s;
-
-  @include breakpoint($large) {
-    display: flex;
-    gap: 1.5rem;
-  }
 
   @include breakpoint($x-large) {
     max-width: $x-large;
@@ -24,8 +18,9 @@
 
 .page {
   @include breakpoint($large) {
-    flex: 1;
-    min-width: 0;
+    @include span(10 of 12 last);
+    @include prefix(0.5 of 12);
+    @include suffix(2 of 12);
   }
 
   .page__inner-wrap {
@@ -386,6 +381,12 @@
   margin-top: 2em;
   padding-top: 1em;
   border-top: 1px solid var(--global-border-color);
+  @include clearfix();
+  float: left;
+
+  @include breakpoint($large) {
+    @include pre(2.5 of 12);
+  }
 
   a {
     color: inherit;
