--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -17,13 +17,15 @@
     margin-top: 1em;
   }
 
+  @media screen and (min-width: $sidebar-screen-min-width) {
+    height: 100vh;
+    overflow-y: auto;               // Add scrollbar if the sidebar is too long
+    position: fixed;
+    padding-top: $masthead-height;
+  }
+
   @include breakpoint($large) {
-    width: 200px;
-    flex-shrink: 0;
-    position: sticky;
-    top: $masthead-height;
-    height: calc(100vh - #{$masthead-height});
-    overflow-y: auto;
+    @include span(2 of 12);
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
@@ -34,7 +36,8 @@
   }
 
   @include breakpoint($x-large) {
-    width: $sidebar-link-max-width;
+    max-width: $sidebar-link-max-width;
+    padding-right: 0;
   }
 
   h2, h3, h4, h5, h6 {
